# conduit

./: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Deepwork.tsx  SessionReflection.tsx  TaskBreak.tsx  TaskCardModal.tsx  Timer.tsx  TimerStack.tsx  app-layout.tsx  app-sidebar.tsx  rpg-task-cards.tsx  task-details.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/theme-sets/: theme-set-provider.tsx  theme-set-toggle.tsx
src/components/ui/: sidebar.tsx
src/hooks/: useTaskBreakdown.ts
src/store/: useStore.ts
src/types/: index.ts
src/utils/: formatters.ts
